--- a/_config.yml
+++ b/_config.yml
@@ -23,11 +23,11 @@ repository               : "academicpages/academicpages.github.io"
 author:
   # Biographic information
   avatar           : "profile.png"
-  name             : "Your Sidebar Name"
-  pronouns         : # example: "she/her"  
+  name             : "chen yingfeng"
+  pronouns         : # example: "He/His"  
   bio              : "Short biography for the left-hand sidebar"
   location         : "Earth"
-  employer         : "Red Brick University"
+  employer         : "Tsinghua University"
   uri              : # URL
   email            : "none@example.org" 
 
